--- a/index.html
+++ b/index.html
@@ -276,7 +276,9 @@ I'm always open to collaboration on research and projects that align with mutual
                             <u>Javed Ahmad</u>, el al.
                         </div>
                         <div>
-			                Preprint will be availabe soon
+                            Paper in proceeding soon,  copy can be requested from me.
+                            <a href="https://drive.google.com/file/d/1sH40aj5_DSdPzKM-3Iiiy_OLRj1Dwrjh/view?usp=drive_link">[<teaser]</a>
+			                <a href="https://docs.google.com/presentation/d/1MBUv1njjWI4_ZAZRXxnga55AR54_LVU9/edit?usp=sharing&ouid=116365879728607902406&rtpof=true&sd=true">[presentation]</a>
                         </div>
                     </div>
                 </div>
