--- a/index.html
+++ b/index.html
@@ -276,9 +276,9 @@ I'm always open to collaboration on research and projects that align with mutual
                             <u>Javed Ahmad</u>, el al.
                         </div>
                         <div>
-                            Paper in proceeding soon,  copy can be requested from me.
-                            <a href="https://drive.google.com/file/d/1sH40aj5_DSdPzKM-3Iiiy_OLRj1Dwrjh/view?usp=drive_link">[<teaser]</a>
-			                <a href="https://docs.google.com/presentation/d/1MBUv1njjWI4_ZAZRXxnga55AR54_LVU9/edit?usp=sharing&ouid=116365879728607902406&rtpof=true&sd=true">[presentation]</a>
+                            Paper in proceedings soon,  early copy can be requested from me.
+                            <a href="https://drive.google.com/file/d/1sH40aj5_DSdPzKM-3Iiiy_OLRj1Dwrjh/view?usp=drive_link">[Teaser]</a>
+			                <a href="https://docs.google.com/presentation/d/1M0Ux4FAmOuOk3rnylouWeYdZtPPxR-fE/edit?usp=sharing&ouid=116365879728607902406&rtpof=true&sd=true">[Presentation]</a>
                         </div>
                     </div>
                 </div>
@@ -301,6 +301,7 @@ I'm always open to collaboration on research and projects that align with mutual
                         </div>
                         <div>
                             <a href="https://arxiv.org/abs/2311.04058">[paper]</a>
+                            <a href="https://docs.google.com/presentation/d/14Pi3Se1FFHXG2wP3QOKE09P9Vxhoicec/edit?usp=sharing&ouid=116365879728607902406&rtpof=true&sd=true">[Presentation]</a>
 			                Code can be request through emailing to me
                         </div>
                     </div>
@@ -351,6 +352,7 @@ I'm always open to collaboration on research and projects that align with mutual
                         <div>
                             <a href="https://link.springer.com/chapter/10.1007/978-3-031-06430-2_8">[paper]</a>
 			                <a href="https://github.com/javi-99/Multi-view-3D-Objects-Localization-from-Street-level-Scenes">[Code]</a>
+                            <a href="https://docs.google.com/presentation/d/1FQcilkWd2onnH_whNc4Kb-wAGKRRF06R/edit?usp=sharing&ouid=116365879728607902406&rtpof=true&sd=true">[Presentation]</a>
                         </div>
                     </div>
                 </div>
