--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
                     </ul>
                     </div>
                   <div id='header-text-email'>
-                        javed.ahmad (at) iit (dot) it
+                        javed.ahmad (at) iit (dot) it </br>
+                        javed.sial91 (at) gmail (dot) com
                   </div>
                   <br><br>
                   <div class="center">
