--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ I'm always open to collaboration on research and projects that align with mutual
                             <u>Javed Ahmad</u>, el al.
                         </div>
                         <div>
-                            Paper in proceedings soon,  early copy can be requested from me.
+                            <a href="https://ieeexplore.ieee.org/document/10704902">[Paper]</a>
                             <a href="https://drive.google.com/file/d/1sH40aj5_DSdPzKM-3Iiiy_OLRj1Dwrjh/view?usp=drive_link">[Teaser]</a>
 			                <a href="https://docs.google.com/presentation/d/1M0Ux4FAmOuOk3rnylouWeYdZtPPxR-fE/edit?usp=sharing&ouid=116365879728607902406&rtpof=true&sd=true">[Presentation]</a>
                         </div>
