--- a/index.html
+++ b/index.html
@@ -77,7 +77,22 @@
           .paper-authors {
             font-style: italic;
           }
+
+
+        #sidebar {
+        position: absolute;
+        top: 27%;
+        right: 20px;
+        width: 200px;
+        background-color: #f4f4f4;
+        padding: 15px;
+        border-radius: 5px;
+        box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+        font-size: 0.7em;
+        color: #4F6071;
+    }
     </style>
+
 </head>
 
 
@@ -262,7 +277,7 @@ I'm always open to collaboration on research and projects that align with mutual
 
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
-                        <video  playsinline="" autoplay="" loop="" preload="" muted="">
+                        <video playsinline="" autoplay="" loop="" preload="" muted="">
                             <source src="imgs/AAPOE_teaser.mp4" type="video/mp4">
                         </video>
                     </div>
@@ -388,6 +403,15 @@ I'm always open to collaboration on research and projects that align with mutual
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
     
+    <div id="sidebar">
+        <div class='header-text-title'>
+            <span style="font-weight: bold; font-size: 1.3em;">External Supervision</span> </br>
+        </div>
+        <ul>
+            <li><strong>PhD Student:</strong> Touseef Bhatti , Multi-sensor fusion for 3D detection, Dept. of Mathematics, Computer Science, and Engineering, <a href="https://www.hope.ac.uk/">Liverpool Hope University, UK</a> </br>
+            <li> <strong>Master Student:</strong> Faisal Sohail, GCU,FSD, Pak</br>
+        </ul>
+    </div>
 </body>
 
 </html>
