--- a/index.html
+++ b/index.html
@@ -226,8 +226,9 @@
 
     <div class="logo-container">
         <img src="imgs/Logo-IIT_CaFoscari.png" alt="Organization Logo 1">
-        <img src="imgs/pavis_logo.jpeg" alt="Organization Logo 2">
-        <img src="imgs/Unige-logo.png" alt="Organization Logo 3">
+        <!--<img src="imgs/cte_genova_logo.png" alt="Organization Logo 2">-->
+        <img src="imgs/pavis_logo.jpeg" alt="Organization Logo 3">
+        <img src="imgs/Unige-logo.png" alt="Organization Logo 4">
     </div>
 
     <div class="news-bar" name="News">
@@ -252,6 +253,24 @@
     </div>
 
     <div class="container content-section">
+        <h1> Projects</h1>
+        <div class="publication-item">
+            <div class="row" >
+                <div class="col-md-4">
+                    <img src="imgs/logo-ufficiale-CTE-GENOVA-01-1-scaled.jpg" class="img-fluid" alt="Cte_genova">
+                </div>
+                <div class="col-md-8">
+                    <div class="title"> <a href="https://cte.comune.genova.it/"> <strong>CTE-Genova</strong> </a>  </div>
+                    <p>Developing an automated platform for the scanning and digital preservation of cultural heritage artifacts, as part of the Genova-based House of Emerging Technologies project. This system utilizes robotic automation to enable comprehensive 3D scans of valuable objects, supporting their study and preservation.</p> 
+                    <div class="text-decoration">MORE DETAILS WILL BE POSTED AFTER COMPLETION OF PROJECT </div>
+                </div>
+
+            </div>
+        </div>
+    
+    </div>   
+
+    <div class="container content-section">
         <h1>Publications</h1>
         <div class="publication-item">
             <div class="row">
@@ -261,7 +280,7 @@
                     </video>
                 </div>
                 <div class="col-md-8">
-                    <div class="title">AAPOE: Automated Artifacts Positions and Orientations Estimation in Cultural Heritage</div>
+                    <div class="title"><strong>AAPOE: Automated Artifacts Positions and Orientations Estimation in Cultural Heritage</strong></div>
                     <div class="date">IEEE/ASME MESA 2024</div>
                     <div class="authors"><u>Javed Ahmad</u>, et al.</div>
                     <div>
@@ -278,7 +297,7 @@
                     <img src="imgs/mmFUSION.png" class="img-fluid" alt="mmFUSION">
                 </div>
                 <div class="col-md-8">
-                    <div class="title">mmFUSION: Multi-modal Fusion for 3D Objects Detection</div>
+                    <div class="title"> <strong>mmFUSION: Multi-modal Fusion for 3D Objects Detection</strong></div>
                     <div class="date">arXiv (2023)</div>
                     <div class="authors"><u>Javed Ahmad</u>, Alessio Del Bue</div>
                     <div>
@@ -295,7 +314,7 @@
                     <img src="imgs/product_retrieval.png" class="img-fluid" alt="Product Retrieval">
                 </div>
                 <div class="col-md-8">
-                    <div class="title">Fill in the blank for fashion complementary outfit product retrieval: VISUM summer school competition</div>
+                    <div class="title"><strong>Fill in the blank for fashion complementary outfit product retrieval: VISUM summer school competition</strong></div>
                     <div class="date">Machine Vision and Applications (2023)</div>
                     <div class="authors">
                         Eduardo Castro, Pedro M. Ferreira, Ana Rebelo, Isabel Rio-Torto, Leonardo Capozzi, Mafalda Falcão Ferreira, Tiago Gonçalves, Tomé Albuquerque,
@@ -315,7 +334,7 @@
                     <img src="imgs/iciap2021.png" class="img-fluid" alt="ICIAP 2021">
                 </div>
                 <div class="col-md-8">
-                    <div class="title">Multi-view 3D Objects Localization from Street-Level Scenes</div>
+                    <div class="title"><strong></strong> Multi-view 3D Objects Localization from Street-Level Scenes</div>
                     <div class="date">ICIAP (2022)</div>
                     <div class="authors"><u>Javed Ahmad</u>, Matteo Toso, Matto Taiana, Stuart James, Alessio Del Bue</div>
                     <div>
