--- a/index.html
+++ b/index.html
@@ -201,12 +201,13 @@
         <h1>Javed Ahmad</h1>
         <h2>PostDoc. Researcher</h2>
         <p>
-            <a href="https://ccht.iit.it/">Center for Cultural Heritage Technology (CCHT)</a><br>
-            at <a href="https://www.iit.it/it/home">Istituto Italiano di Tecnologia (IIT), Venice, Italy</a>
+            <a href="https://advr.iit.it/">Advanced Robotics (ADVR)</a><br>
+            at <a href="https://www.iit.it/it/home">Istituto Italiano di Tecnologia (IIT), Genova, Italy</a>
         </p>
         <p>
             <strong>Research Interests:</strong><br>
                 3D Computer Vision & Deep Learning<br>
+                Gaussian Splatting based SLAM System<br>
                 Multimodal 3D Scene Perception<br>
                 Robotic Manipulations and 3D Reconstruction
         </p>
@@ -225,7 +226,8 @@
     </div>
 
     <div class="logo-container">
-        <img src="imgs/Logo-IIT_CaFoscari.png" alt="Organization Logo 1">
+        <img src="imgs/logo_advr.png" alt="Organization Logo 1">
+        <img src="imgs/Logo-IIT_CaFoscari.png" alt="Organization Logo 2">
         <!--<img src="imgs/cte_genova_logo.png" alt="Organization Logo 2">-->
         <img src="imgs/pavis_logo.jpeg" alt="Organization Logo 3">
         <img src="imgs/Unige-logo.png" alt="Organization Logo 4">
@@ -247,7 +249,7 @@
         <h1>Bio</h1>
         <p>
             Hi,<br>
-            I am a Postdoctoral Researcher currently working on 3D reconstruction using robotic manipulators at <a href="https://ccht.iit.it/">CCHT, IIT, Italy.</a> I completed my PhD at the <a href="https://pavis.iit.it/">PAVIS Lab, IIT,</a> where I specialized in 3D object detection and multimodal fusion for enhanced 3D scene perception.
+            I am a Postdoctoral Researcher currently working on Gaussian Splatting based SLAM system at <a href="https://advr.iit.it/">ADVR, IIT, Genova.</a>.  Previously, I was also Posdoc and worked on 3D scanning/reconstruction of artefacts using robotic manipulators at <a href="https://ccht.iit.it/">CCHT, IIT, Venice.</a> I did my PhD at the <a href="https://pavis.iit.it/">PAVIS Lab, IIT,</a> with Alessio Del Bue, where I specialized in 3D object detection and multimodal fusion for enhanced 3D scene perception.
             I'm always open to collaboration on research and projects that align with mutual goals. Feel free to reach out.
         </p>
     </div>
@@ -347,6 +349,8 @@
         </div>
     </div>
 
+    <!--
+
     <div id="collaborators">
         <h2>External Collaboration & Supervision</h2>
         <div class="collaborator-profile">
@@ -383,7 +387,7 @@
             <div class="social-links">
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div id="footer">
         <p>&copy; 2023 Javed Ahmad. All rights reserved.</p>
